--- a/contact.html
+++ b/contact.html
@@ -7,28 +7,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(a,b,c){var d=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var f=a[b]+"MaxTouchPoints";if(f in navigator&&navigator[f])return!0}try{return document.createEvent("TouchEvent"),!0}catch(d){}return!1}(),g=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var f=b[c];f.charAt(0)==" ";)f=f.substring(1,f.length);if(f.indexOf(a)==
+0)return f.substring(a.length,f.length)}return null};if(g("inbrowserediting")!="true"){var f,g=g("devicelock");g=="phone"&&c?f=c:g=="tablet"&&b&&(f=b);if(g!=a&&!f)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&c?f=c:window.matchMedia("(max-device-width: 960px)").matches&&b&&d&&(f=b);else{var a=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),g=window.screen.systemXDPI||0,i=window.screen.systemYDPI||0,g=g>0&&i>0?Math.min(screen.width/g,screen.height/i):
+0;(a<=370||g!=0&&g<=3)&&c?f=c:a<=960&&b&&d&&(f=b)}if(f)document.location=f+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/contact.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.musemenu.js", "webpro.js", "jquery.watch.js", "require.js", "contact.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "require.js", "contact.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://jafgreenmaroc.com/phone/contact.html"/>
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3807133489"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3938399810" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=528732068"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=440429391" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=4161864206"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=3785613044"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/source-sans-pro:n4,n7:default;open-sans:n7,i3,n3,i6:default;montserrat:n4:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/source-sans-pro:n4,n7:default;montserrat:n4:default;open-sans:n7,i3,n3,i6:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -36,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script type="text/javascript">
    var muReCAPTCHA2Instances = {};
 var muReCAPTCHA2OnloadCallback = function() {
-	muReCAPTCHA2Instances['widgetu12876'] = grecaptcha.render('widgetu12876_recaptcha2', {"type":"image","sitekey":"6LdPuT4UAAAAAEsySh5GFXF_-oRg9MVuIJwnJscF","theme":"light","size":"normal"});
+	muReCAPTCHA2Instances['widgetu12876'] = grecaptcha.render('widgetu12876_recaptcha2', {"type":"image","theme":"light","size":"normal","sitekey":"6LdPuT4UAAAAAEsySh5GFXF_-oRg9MVuIJwnJscF"});
 };
 </script>
    </head>
@@ -53,11 +59,8 @@ var muReCAPTCHA2OnloadCallback = function() {
     <div class="clearfix" id="u8422"><!-- group -->
      <a class="nonblock nontext clearfix" id="u695-4" href="index.html" data-href="page:U93" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-IBE-flags="txtStyleSrc"><!-- content --><p>jafgREEN mAROC</p></a>
      <nav class="MenuBar clearfix" id="menuu5136"><!-- horizontal box -->
-      <div class="MenuItemContainer clearfix grpelem" id="u5513"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5516" href="a-propos.html" data-href="page:U855"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>A propos</p></div></a>
-      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5548"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5551" href="produits.html" data-href="page:U4525"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5553-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Produits</p></div><div class="museBGSize grpelem" id="u5554" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></div></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5551" href="produits.html" data-href="page:U4525"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5553-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Produits</p></div><div class="grpelem" id="u5554" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></div></a>
        <div class="SubMenu MenuLevel1 clearfix" id="u5549"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u5550"><!-- vertical box -->
          <li class="MenuItemContainer clearfix colelem" id="u6556"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6558" href="biostimulants.html" data-href="page:U5063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6562-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Biostimulants</p></div></a></li>
@@ -67,6 +70,9 @@ var muReCAPTCHA2OnloadCallback = function() {
          <li class="MenuItemContainer clearfix colelem" id="u6592"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6593" href="formations.html" data-href="page:U5135"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6594-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Formations</p></div></a></li>
         </ul>
        </div>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u14752"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14790" href="a-propos.html" data-href="page:U855"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14793-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>a propos</p></div></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5583"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5584" href="gallerie.html" data-href="page:U891"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5587-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Gallerie</p></div></a>
@@ -87,7 +93,7 @@ var muReCAPTCHA2OnloadCallback = function() {
      <div class="clearfix grpelem" id="pu12159"><!-- column -->
       <!-- m_editable region-id="editable-static-tag-U12159-BP_infinity" template="contact.html" data-type="image" -->
       <div class="clip_frame colelem" id="u12159" data-muse-uid="U12159" data-muse-type="img_frame"><!-- image -->
-       <img class="block" id="u12159_img" src="images/logo-crop-u12159.png?crc=290123782" alt="" data-muse-src="images/logo-crop-u12159.png?crc=290123782" data-heightwidthratio="1.264840182648402" data-image-width="219" data-image-height="277"/>
+       <img class="block" id="u12159_img" src="images/logo-crop-u121592.png?crc=4053505680" alt="" data-muse-src="images/logo-crop-u121592.png?crc=4053505680" data-heightwidthratio="1.264840182648402" data-image-width="219" data-image-height="277"/>
       </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U14633-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -174,7 +180,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.musemenu","webpro","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","webpro","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
