--- a/formations.html
+++ b/formations.html
@@ -7,28 +7,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(a,b,c){var d=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var f=a[b]+"MaxTouchPoints";if(f in navigator&&navigator[f])return!0}try{return document.createEvent("TouchEvent"),!0}catch(d){}return!1}(),g=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var f=b[c];f.charAt(0)==" ";)f=f.substring(1,f.length);if(f.indexOf(a)==
+0)return f.substring(a.length,f.length)}return null};if(g("inbrowserediting")!="true"){var f,g=g("devicelock");g=="phone"&&c?f=c:g=="tablet"&&b&&(f=b);if(g!=a&&!f)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&c?f=c:window.matchMedia("(max-device-width: 960px)").matches&&b&&d&&(f=b);else{var a=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),g=window.screen.systemXDPI||0,i=window.screen.systemYDPI||0,g=g>0&&i>0?Math.min(screen.width/g,screen.height/i):
+0;(a<=370||g!=0&&g<=3)&&c?f=c:a<=960&&b&&d&&(f=b)}if(f)document.location=f+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/formations.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "musewpdisclosure.js", "formations.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "require.js", "musewpdisclosure.js", "formations.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://jafgreenmaroc.com/phone/formations.html"/>
   <title>Formations</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3807133489"/>
-  <link rel="stylesheet" type="text/css" href="css/formations.css?crc=4209908071" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=528732068"/>
+  <link rel="stylesheet" type="text/css" href="css/formations.css?crc=249280663" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_formations.css?crc=4144129580"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_formations.css?crc=376783390"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/open-sans:n7,n8,n4:default;montserrat:n4:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7,n8,n4:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -46,9 +52,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix" id="u8422"><!-- group -->
      <a class="nonblock nontext clearfix" id="u695-4" href="index.html" data-href="page:U93" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-IBE-flags="txtStyleSrc"><!-- content --><p>jafgREEN mAROC</p></a>
      <nav class="MenuBar clearfix" id="menuu5136"><!-- horizontal box -->
-      <div class="MenuItemContainer clearfix grpelem" id="u5513"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5516" href="a-propos.html" data-href="page:U855"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>A propos</p></div></a>
-      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5548"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5551" href="produits.html" data-href="page:U4525"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5553-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Produits</p></div><div class="grpelem" id="u5554" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></div></a>
        <div class="SubMenu MenuLevel1 clearfix" id="u5549"><!-- vertical box -->
@@ -60,6 +63,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <li class="MenuItemContainer clearfix colelem" id="u6592"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u6593" href="formations.html" data-href="page:U5135"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6594-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Formations</p></div></a></li>
         </ul>
        </div>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u14752"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14790" href="a-propos.html" data-href="page:U855"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14793-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>a propos</p></div></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u5583"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5584" href="gallerie.html" data-href="page:U891"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5587-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Gallerie</p></div></a>
