--- a/phone/a-propos.html
+++ b/phone/a-propos.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="canonical" href="http://jafgreenmaroc.com/a-propos.html"/>
   <title>A propos</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4021613078"/>
-  <link rel="stylesheet" type="text/css" href="css/a-propos.css?crc=3938950028" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=4154027563"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=365230041"/>
+  <link rel="stylesheet" type="text/css" href="css/a-propos.css?crc=200418194" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_a-propos.css?crc=4008622911"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_a-propos.css?crc=4144563146"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -78,7 +78,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u15565popup">
            <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u15565"><!-- group -->
             <div class="clip_frame grpelem" id="u15645"><!-- image -->
-             <img class="block" id="u15645_img" src="../images/close-u16520-fr.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="29" data-image-height="29"/>
+             <img class="block" id="u15645_img" src="../images/close-u16520-fr2.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58"/>
             </div>
            </div>
           </div>
@@ -98,7 +98,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="404" data-content-above-spacer="403" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="475" data-content-above-spacer="475" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u15343-bw">
     <div class="clearfix" id="u15343"><!-- group -->
      <div class="clearfix grpelem" id="u15410-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-IBE-flags="txtStyleSrc"><!-- content -->
