--- a/phone/agents-pollinisateurs.html
+++ b/phone/agents-pollinisateurs.html
@@ -17,15 +17,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="canonical" href="http://jafgreenmaroc.com/agents-pollinisateurs.html"/>
   <title>Agents Pollinisateurs</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4021613078"/>
-  <link rel="stylesheet" type="text/css" href="css/agents-pollinisateurs.css?crc=3907215028" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=4154027563"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=365230041"/>
+  <link rel="stylesheet" type="text/css" href="css/agents-pollinisateurs.css?crc=81881949" id="pagesheet"/>
+  <!-- IE-only CSS -->
+  <!--[if lt IE 9]>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_agents-pollinisateurs.css?crc=4051952099"/>
+  <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7,n4:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="../scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -33,47 +37,49 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu15639"><!-- group -->
-    <div class="clearfix grpelem" id="u15639"><!-- group -->
-     <div class="clearfix grpelem" id="u15342"><!-- group -->
-      <div class="PamphletWidget clearfix allow_click_through grpelem" id="pamphletu15549" data-visibility="changed" style="visibility:hidden" data-islightbox="true"><!-- none box -->
-       <div class="position_content widget_invisible" id="pamphletu15549_position_content">
-        <div class="ThumbGroup clearfix colelem" data-col-pos="0" id="u15561"><!-- none box -->
-         <div class="popup_anchor allow_click_through grpelem" data-col-pos="0" id="u15562popup">
-          <div class="Thumb popup_element clearfix" data-col-pos="0" id="u15562"><!-- column -->
-           <div class="position_content" data-col-pos="0" id="u15562_position_content">
-            <div class="colelem" id="u15603"><!-- simple frame --></div>
-            <div class="colelem" id="u15609"><!-- simple frame --></div>
-            <div class="colelem" id="u15612"><!-- simple frame --></div>
+   <div class="clearfix grpelem" id="ppu15639"><!-- column -->
+    <div class="clearfix colelem" id="pu15639"><!-- group -->
+     <div class="clearfix grpelem" id="u15639"><!-- group -->
+      <div class="clearfix grpelem" id="u15342"><!-- group -->
+       <div class="PamphletWidget clearfix allow_click_through grpelem" id="pamphletu15549" data-visibility="changed" style="visibility:hidden" data-islightbox="true"><!-- none box -->
+        <div class="position_content widget_invisible" id="pamphletu15549_position_content">
+         <div class="ThumbGroup clearfix colelem" data-col-pos="0" id="u15561"><!-- none box -->
+          <div class="popup_anchor allow_click_through grpelem" data-col-pos="0" id="u15562popup">
+           <div class="Thumb popup_element clearfix" data-col-pos="0" id="u15562"><!-- column -->
+            <div class="position_content" data-col-pos="0" id="u15562_position_content">
+             <div class="colelem" id="u15603"><!-- simple frame --></div>
+             <div class="colelem" id="u15609"><!-- simple frame --></div>
+             <div class="colelem" id="u15612"><!-- simple frame --></div>
+            </div>
            </div>
           </div>
          </div>
-        </div>
-        <div class="clearfix colelem" id="pu15554"><!-- group -->
-         <div class="popup_anchor allow_click_through grpelem" data-col-pos="1" id="u15554popup" data-lightbox="true">
-          <div class="ContainerGroup clearfix" data-col-pos="1" id="u15554"><!-- stack box -->
-           <div class="Container invi clearfix grpelem" data-col-pos="0" id="u15559"><!-- group -->
-            <nav class="MenuBar clearfix grpelem" id="menuu15346"><!-- vertical box -->
-             <div class="MenuItemContainer clearfix colelem" id="u15389"><!-- horizontal box -->
-              <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15390" href="produits.html" data-href="page:U15028"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15391-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Produits</p></div></a>
-             </div>
-             <div class="MenuItemContainer clearfix colelem" id="u15403"><!-- horizontal box -->
-              <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15404" href="a-propos.html" data-href="page:U15244"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15405-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>A propos</p></div></a>
-             </div>
-             <div class="MenuItemContainer clearfix colelem" id="u15396"><!-- horizontal box -->
-              <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15399" href="gallerie.html" data-href="page:U15280"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15401-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Gallerie</p></div></a>
-             </div>
-             <div class="MenuItemContainer clearfix colelem" id="u15615"><!-- horizontal box -->
-              <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15618" href="contact.html" data-href="page:U15316"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15619-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Contact</p></div></a>
-             </div>
-            </nav>
+         <div class="clearfix colelem" id="pu15554"><!-- group -->
+          <div class="popup_anchor allow_click_through grpelem" data-col-pos="1" id="u15554popup" data-lightbox="true">
+           <div class="ContainerGroup clearfix" data-col-pos="1" id="u15554"><!-- stack box -->
+            <div class="Container invi clearfix grpelem" data-col-pos="0" id="u15559"><!-- group -->
+             <nav class="MenuBar clearfix grpelem" id="menuu15346"><!-- vertical box -->
+              <div class="MenuItemContainer clearfix colelem" id="u15389"><!-- horizontal box -->
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15390" href="produits.html" data-href="page:U15028"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15391-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Produits</p></div></a>
+              </div>
+              <div class="MenuItemContainer clearfix colelem" id="u15403"><!-- horizontal box -->
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15404" href="a-propos.html" data-href="page:U15244"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15405-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>A propos</p></div></a>
+              </div>
+              <div class="MenuItemContainer clearfix colelem" id="u15396"><!-- horizontal box -->
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15399" href="gallerie.html" data-href="page:U15280"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15401-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Gallerie</p></div></a>
+              </div>
+              <div class="MenuItemContainer clearfix colelem" id="u15615"><!-- horizontal box -->
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15618" href="contact.html" data-href="page:U15316"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15619-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Contact</p></div></a>
+              </div>
+             </nav>
+            </div>
            </div>
           </div>
-         </div>
-         <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u15565popup">
-          <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u15565"><!-- group -->
-           <div class="clip_frame grpelem" id="u15645"><!-- image -->
-            <img class="block" id="u15645_img" src="../images/close-u16520-fr.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="29" data-image-height="29"/>
+          <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u15565popup">
+           <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u15565"><!-- group -->
+            <div class="clip_frame grpelem" id="u15645"><!-- image -->
+             <img class="block" id="u15645_img" src="../images/close-u16520-fr2.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58"/>
+            </div>
            </div>
           </div>
          </div>
@@ -81,10 +87,39 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
+     <a class="nonblock nontext clearfix grpelem" id="u15345-4" href="../index.html?devicelock=desktop" data-href="page:U93" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p>jafgREEN mAROC</p></a>
     </div>
-    <a class="nonblock nontext clearfix grpelem" id="u15345-4" href="../index.html?devicelock=desktop" data-href="page:U93" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p>jafgREEN mAROC</p></a>
+    <!-- m_editable region-id="editable-static-tag-U30024-BP_infinity" template="phone/agents-pollinisateurs.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u30024-7" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-muse-uid="U30024" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p id="u30024-3">Societé <span id="u30024-2">Jafgreen Maroc</span></p>
+     <p id="u30024-5">au service des agriculteurs pour la pollinisation par les abeilles</p>
+    </div>
+    <!-- /m_editable -->
+    <div class="clearfix colelem" id="u30017"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U30020-BP_infinity" template="phone/agents-pollinisateurs.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u30020" data-muse-uid="U30020" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u30020_img" src="../images/pollinisation-crop-u30020.png?crc=3983705258" alt="" data-muse-src="../images/pollinisation-crop-u30020.png?crc=3983705258" data-heightwidthratio="0.6170212765957447" data-image-width="282" data-image-height="174"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U30018-BP_infinity" template="phone/agents-pollinisateurs.html" data-type="image" -->
+     <div class="rounded-corners clip_frame grpelem" id="u30018" data-muse-uid="U30018" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u30018_img" src="../images/beekeeping-supplies-image-crop-u30018.png?crc=3857455392" alt="" data-muse-src="../images/beekeeping-supplies-image-crop-u30018.png?crc=3857455392" data-heightwidthratio="1" data-image-width="127" data-image-height="127"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U30022-BP_infinity" template="phone/agents-pollinisateurs.html" data-type="image" -->
+     <div class="rounded-corners clip_frame grpelem" id="u30022" data-muse-uid="U30022" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u30022_img" src="../images/_5810190_orig-crop-u30022.png?crc=3881237390" alt="" data-muse-src="../images/_5810190_orig-crop-u30022.png?crc=3881237390" data-heightwidthratio="1" data-image-width="92" data-image-height="92"/>
+     </div>
+     <!-- /m_editable -->
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U30016-BP_infinity" template="phone/agents-pollinisateurs.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u30016-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-muse-uid="U30016" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p>Les insectes et les fleurs sont indissociables. Leurs relations mutuellement bénéfiques sont largement responsables de la biodiversité végétale que l’on connaît actuellement.</p>
+     <p>Les insectes pollinisateurs facilitent la reproduction sexuée, contribuent à la survie et à l’évolution de plus de 80 % des espèces de plantes à fleurs. De plus, sachant que l’agriculture tient une part importante dans l’économie mondiale, on comprend mieux l’importance de ces agents disperseurs de pollen. Il est erroné de penser que la pollinisation est un « service écologique gratuit » fourni par la nature. Pour être efficace, ce processus a besoin de ressources, comme par exemple de refuges de végétation naturelle et d’habitats adaptés pour accueillir les pollinisateurs. Lorsque ces ressources diminuent ou disparaissent, le nombre de pollinisateurs se réduit et des méthodes de gestion adaptatives doivent être développées pour maintenir les moyens d’existence.</p>
+    </div>
+    <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="70" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="764" data-content-above-spacer="764" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u15343-bw">
     <div class="clearfix" id="u15343"><!-- group -->
      <div class="clearfix grpelem" id="u15410-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-IBE-flags="txtStyleSrc"><!-- content -->
