--- a/phone/formations.html
+++ b/phone/formations.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="canonical" href="http://jafgreenmaroc.com/formations.html"/>
   <title>Formations</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4021613078"/>
-  <link rel="stylesheet" type="text/css" href="css/formations.css?crc=3907215028" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=4154027563"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=365230041"/>
+  <link rel="stylesheet" type="text/css" href="css/formations.css?crc=4278197533" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -73,7 +73,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u15565popup">
           <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u15565"><!-- group -->
            <div class="clip_frame grpelem" id="u15645"><!-- image -->
-            <img class="block" id="u15645_img" src="../images/close-u16520-fr.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="29" data-image-height="29"/>
+            <img class="block" id="u15645_img" src="../images/close-u16520-fr2.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58"/>
            </div>
           </div>
          </div>
