--- a/phone/index.html
+++ b/phone/index.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="canonical" href="http://jafgreenmaroc.com/index.html"/>
   <title>Home</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4021613078"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=174278609" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=4154027563"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=365230041"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=470112335" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -60,20 +60,20 @@ margin-top: 15vh  !important;
          </div>
          <div class="clearfix colelem" id="pu15554"><!-- group -->
           <div class="popup_anchor allow_click_through grpelem" data-col-pos="1" id="u15554popup" data-lightbox="true">
-           <div class="ContainerGroup clearfix" data-col-pos="1" id="u15554"><!-- stack box -->
+           <div class="ContainerGroup rgba-background clearfix" data-col-pos="1" id="u15554"><!-- stack box -->
             <div class="Container invi clearfix grpelem" data-col-pos="0" id="u15559"><!-- group -->
              <nav class="MenuBar clearfix grpelem" id="menuu15346"><!-- vertical box -->
               <div class="MenuItemContainer clearfix colelem" id="u15389"><!-- horizontal box -->
-               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15390" href="produits.html" data-href="page:U15028"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15391-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Produits</p></div></a>
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u15390" href="produits.html" data-href="page:U15028"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15391-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Produits</p></div></a>
               </div>
               <div class="MenuItemContainer clearfix colelem" id="u15403"><!-- horizontal box -->
-               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15404" href="a-propos.html" data-href="page:U15244"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15405-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>A propos</p></div></a>
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u15404" href="a-propos.html" data-href="page:U15244"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15405-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>A propos</p></div></a>
               </div>
               <div class="MenuItemContainer clearfix colelem" id="u15396"><!-- horizontal box -->
-               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15399" href="gallerie.html" data-href="page:U15280"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15401-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Gallerie</p></div></a>
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u15399" href="gallerie.html" data-href="page:U15280"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15401-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Gallerie</p></div></a>
               </div>
               <div class="MenuItemContainer clearfix colelem" id="u15615"><!-- horizontal box -->
-               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15618" href="contact.html" data-href="page:U15316"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15619-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Contact</p></div></a>
+               <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u15618" href="contact.html" data-href="page:U15316"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15619-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Contact</p></div></a>
               </div>
              </nav>
             </div>
@@ -82,7 +82,7 @@ margin-top: 15vh  !important;
           <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u15565popup">
            <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u15565"><!-- group -->
             <div class="clip_frame grpelem" id="u15645"><!-- image -->
-             <img class="block" id="u15645_img" src="../images/close-u16520-fr.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="29" data-image-height="29"/>
+             <img class="block" id="u15645_img" src="../images/close-u16520-fr2.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58"/>
             </div>
            </div>
           </div>
@@ -93,13 +93,39 @@ margin-top: 15vh  !important;
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u15345-4" href="../index.html?devicelock=desktop" data-href="page:U93" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p>jafgREEN mAROC</p></a>
     </div>
-    <!-- m_editable region-id="editable-static-tag-U15665-BP_infinity" template="phone/index.html" data-type="image" -->
-    <div class="clip_frame colelem" id="u15665" data-muse-uid="U15665" data-muse-type="img_frame"><!-- image -->
-     <img class="block" id="u15665_img" src="../images/logo-crop-u12159.png?crc=290123782" alt="" data-muse-src="../images/logo-crop-u12159.png?crc=290123782" data-heightwidthratio="1.2656826568265682" data-image-width="271" data-image-height="343"/>
+    <div class="SlideShowWidget clearfix HeroFillFrame colelem" id="slideshowu26922" data-visibility="changed" style="visibility:hidden"><!-- none box -->
+     <div class="popup_anchor allow_click_through grpelem" data-col-pos="0" id="u26924popup">
+      <div class="SlideShowContentPanel clearfix" data-col-pos="0" id="u26924"><!-- stack box -->
+       <!-- m_editable region-id="editable-static-tag-U26929-BP_infinity" template="phone/index.html" data-type="image" data-ice-options="srcAttr=data-src" -->
+       <div class="SSSlide FullHeight2 gradient clip_frame grpelem" data-col-pos="0" id="u26929" data-muse-uid="U26929" data-muse-type="img_frame"><!-- image -->
+        <img class="ImageInclude" data-col-pos="0" id="u26929_img" data-src="../images/treefertilizer-1200x801.jpg?crc=3822974097" src="../images/blank.gif?crc=4208392903" alt="" data-width="691" data-height="461" data-muse-src="../images/treefertilizer-1200x801.jpg?crc=3822974097"/>
+       </div>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U26931-BP_infinity" template="phone/index.html" data-type="image" data-ice-options="srcAttr=data-src" -->
+       <div class="SSSlide invi FullHeight2 gradient clip_frame grpelem" data-col-pos="1" id="u26931" data-muse-uid="U26931" data-muse-type="img_frame"><!-- image -->
+        <img class="ImageInclude" data-col-pos="1" id="u26931_img" data-src="../images/drip-tape-irrigation-kit-2-1024x683.jpg?crc=4207140260" src="../images/blank.gif?crc=4208392903" alt="" data-width="691" data-height="461" data-muse-src="../images/drip-tape-irrigation-kit-2-1024x683.jpg?crc=4207140260"/>
+       </div>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U26927-BP_infinity" template="phone/index.html" data-type="image" data-ice-options="srcAttr=data-src" -->
+       <div class="SSSlide invi FullHeight2 gradient clip_frame grpelem" data-col-pos="2" id="u26927" data-muse-uid="U26927" data-muse-type="img_frame"><!-- image -->
+        <img class="ImageInclude" data-col-pos="2" id="u26927_img" data-src="../images/o-epandage-pesticides-facebook.jpg?crc=3879173581" src="../images/blank.gif?crc=4208392903" alt="" data-width="899" data-height="461" data-muse-src="../images/o-epandage-pesticides-facebook.jpg?crc=3879173581"/>
+       </div>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U26925-BP_infinity" template="phone/index.html" data-type="image" data-ice-options="srcAttr=data-src" -->
+       <div class="SSSlide invi FullHeight2 gradient clip_frame grpelem" data-col-pos="3" id="u26925" data-muse-uid="U26925" data-muse-type="img_frame"><!-- image -->
+        <img class="ImageInclude" data-col-pos="3" id="u26925_img" data-src="../images/male-worker-spreading-fertilizer-680714255-5bda4e8fc9e77c0051f8955f.jpg?crc=176567169" src="../images/blank.gif?crc=4208392903" alt="" data-width="690" data-height="461" data-muse-src="../images/male-worker-spreading-fertilizer-680714255-5bda4e8fc9e77c0051f8955f.jpg?crc=176567169"/>
+       </div>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U26933-BP_infinity" template="phone/index.html" data-type="image" data-ice-options="srcAttr=data-src" -->
+       <div class="SSSlide invi FullHeight2 gradient clip_frame grpelem" data-col-pos="4" id="u26933" data-muse-uid="U26933" data-muse-type="img_frame"><!-- image -->
+        <img class="ImageInclude" data-col-pos="4" id="u26933_img" data-src="../images/agricultural-lime-supplier.jpg?crc=425803631" src="../images/blank.gif?crc=4208392903" alt="" data-width="1036" data-height="461" data-muse-src="../images/agricultural-lime-supplier.jpg?crc=425803631"/>
+       </div>
+       <!-- /m_editable -->
+      </div>
+     </div>
     </div>
-    <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="456" data-content-above-spacer="456" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="532" data-content-above-spacer="532" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u15343-bw">
     <div class="clearfix" id="u15343"><!-- group -->
      <div class="clearfix grpelem" id="u15410-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-IBE-flags="txtStyleSrc"><!-- content -->
@@ -129,6 +155,7 @@ Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized');
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.initWidget('#pamphletu15549', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:true}); });/* #pamphletu15549 */
+Muse.Utils.initWidget('#slideshowu26922', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'fullWidth',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:true}); $(elem).data('widget', widget); return widget; });/* #slideshowu26922 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
