--- a/phone/contact.html
+++ b/phone/contact.html
@@ -17,19 +17,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="canonical" href="http://jafgreenmaroc.com/contact.html"/>
   <title>Contact</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4021613078"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=200135347" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=4154027563"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=365230041"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3979905461" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=3826715559"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=245998205"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/source-sans-pro:n4,n7:default;montserrat:n4:default;open-sans:n7,i3,n3,i6:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7,i3,n3,i6:default;source-sans-pro:n4,n7:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="../scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -85,7 +85,7 @@ var muReCAPTCHA2OnloadCallback = function() {
           <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u15565popup">
            <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u15565"><!-- group -->
             <div class="clip_frame grpelem" id="u15645"><!-- image -->
-             <img class="block" id="u15645_img" src="../images/close-u16520-fr.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="29" data-image-height="29"/>
+             <img class="block" id="u15645_img" src="../images/close-u16520-fr2.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58"/>
             </div>
            </div>
           </div>
@@ -161,7 +161,7 @@ var muReCAPTCHA2OnloadCallback = function() {
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="985" data-content-above-spacer="985" data-content-below-spacer="44" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1009" data-content-above-spacer="1009" data-content-below-spacer="44" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u15343-bw">
     <div class="clearfix" id="u15343"><!-- group -->
      <div class="clearfix grpelem" id="u15410-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-IBE-flags="txtStyleSrc"><!-- content -->
