--- a/contact.html
+++ b/contact.html
@@ -23,18 +23,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4154027563"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=103909928"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=125880277" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4251948776"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=4240897458" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=82512843"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=3854274931"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/open-sans:n7,i3,n3,i6:default;montserrat:n4:default;source-sans-pro:n4,n7:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7,i3,n3,i6:default;source-sans-pro:n4,n7:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script type="text/javascript">
    var muReCAPTCHA2Instances = {};
 var muReCAPTCHA2OnloadCallback = function() {
-	muReCAPTCHA2Instances['widgetu12876'] = grecaptcha.render('widgetu12876_recaptcha2', {"type":"image","theme":"light","sitekey":"6LdPuT4UAAAAAEsySh5GFXF_-oRg9MVuIJwnJscF","size":"normal"});
+	muReCAPTCHA2Instances['widgetu12876'] = grecaptcha.render('widgetu12876_recaptcha2', {"type":"image","theme":"light","size":"normal","sitekey":"6LdPuT4UAAAAAEsySh5GFXF_-oRg9MVuIJwnJscF"});
 };
 </script>
    </head>
@@ -64,9 +64,10 @@ var muReCAPTCHA2OnloadCallback = function() {
        <div class="SubMenu MenuLevel1 clearfix" id="u5549"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u5550"><!-- vertical box -->
          <li class="MenuItemContainer clearfix colelem" id="u6556"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6558" href="biostimulants.html" data-href="page:U5063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6562-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Biostimulants</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u17122"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17125"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17127-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>engrais standards</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u17178"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17179"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17180-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>correcteurs de carrence</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17122"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17125" href="engrais-standards.html" data-href="page:U23485"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17127-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>engrais standards</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17178"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17179" href="correcteurs-de-carrence.html" data-href="page:U23792"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17180-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>correcteurs de carences</p></div></a></li>
          <li class="MenuItemContainer clearfix colelem" id="u17150"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17151" href="agents-pollinisateurs.html" data-href="page:U5117"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17152-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Agents pollinisateurs</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u30095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u30096" href="formations.html" data-href="page:U5135"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u30097-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Formations</p></div></a></li>
         </ul>
        </div>
       </div>
@@ -92,7 +93,7 @@ var muReCAPTCHA2OnloadCallback = function() {
      <div class="clearfix grpelem" id="pu12159"><!-- column -->
       <!-- m_editable region-id="editable-static-tag-U12159-BP_infinity" template="contact.html" data-type="image" -->
       <div class="clip_frame colelem" id="u12159" data-muse-uid="U12159" data-muse-type="img_frame"><!-- image -->
-       <img class="block" id="u12159_img" src="images/logo-crop-u121592.png?crc=4053505680" alt="" data-muse-src="images/logo-crop-u121592.png?crc=4053505680" data-heightwidthratio="1.264840182648402" data-image-width="219" data-image-height="277"/>
+       <img class="block" id="u12159_img" src="images/logo-crop-u12159.png?crc=4053505680" alt="" data-muse-src="images/logo-crop-u12159.png?crc=4053505680" data-heightwidthratio="1.264840182648402" data-image-width="219" data-image-height="277"/>
       </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U14633-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
