--- a/correcteurs-de-carrence.html
+++ b/correcteurs-de-carrence.html
@@ -7,34 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Redirect to phone/tablet as necessary
-(function(a,b,c){var d=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var f=a[b]+"MaxTouchPoints";if(f in navigator&&navigator[f])return!0}try{return document.createEvent("TouchEvent"),!0}catch(d){}return!1}(),g=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var f=b[c];f.charAt(0)==" ";)f=f.substring(1,f.length);if(f.indexOf(a)==
-0)return f.substring(a.length,f.length)}return null};if(g("inbrowserediting")!="true"){var f,g=g("devicelock");g=="phone"&&c?f=c:g=="tablet"&&b&&(f=b);if(g!=a&&!f)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&c?f=c:window.matchMedia("(max-device-width: 960px)").matches&&b&&d&&(f=b);else{var a=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),g=window.screen.systemXDPI||0,i=window.screen.systemYDPI||0,g=g>0&&i>0?Math.min(screen.width/g,screen.height/i):
-0;(a<=370||g!=0&&g<=3)&&c?f=c:a<=960&&b&&d&&(f=b)}if(f)document.location=f+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/correcteurs-de-carrence.html");
-
-// Update the 'nojs'/'js' class on the html node
+   // Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "jquery.musepolyfill.bgsize.js", "correcteurs-de-carrence.css"], "outOfDate":[]};
 </script>
   
-  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://jafgreenmaroc.com/phone/correcteurs-de-carrence.html"/>
   <title>Correcteurs de Carrence</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4154027563"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=103909928"/>
-  <link rel="stylesheet" type="text/css" href="css/correcteurs-de-carrence.css?crc=4126244124" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4251948776"/>
+  <link rel="stylesheet" type="text/css" href="css/correcteurs-de-carrence.css?crc=146635116" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_correcteurs-de-carrence.css?crc=4218139036"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_correcteurs-de-carrence.css?crc=3844618632"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/open-sans:n7,n4:default;montserrat:n4:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7,n4:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -57,9 +51,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SubMenu MenuLevel1 clearfix" id="u5549"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u5550"><!-- vertical box -->
          <li class="MenuItemContainer clearfix colelem" id="u6556"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6558" href="biostimulants.html" data-href="page:U5063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6562-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Biostimulants</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u17122"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17125"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17127-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>engrais standards</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u17178"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17179"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17180-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>correcteurs de carrence</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17122"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17125" href="engrais-standards.html" data-href="page:U23485"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17127-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>engrais standards</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17178"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u17179" href="correcteurs-de-carrence.html" data-href="page:U23792"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17180-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>correcteurs de carences</p></div></a></li>
          <li class="MenuItemContainer clearfix colelem" id="u17150"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17151" href="agents-pollinisateurs.html" data-href="page:U5117"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17152-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Agents pollinisateurs</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u30095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u30096" href="formations.html" data-href="page:U5135"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u30097-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Formations</p></div></a></li>
         </ul>
        </div>
       </div>
@@ -120,7 +115,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="Container clearfix grpelem" data-col-pos="0" id="u23645"><!-- group -->
           <!-- m_editable region-id="editable-static-tag-U23649-BP_infinity" template="correcteurs-de-carrence.html" data-type="image" -->
           <div class="clip_frame grpelem" id="u23649" data-muse-uid="U23649" data-muse-type="img_frame"><!-- image -->
-           <img class="block" id="u23649_img" src="images/chadofer%20copy.png?crc=4115402468" alt="" data-muse-src="images/chadofer%20copy.png?crc=4115402468" data-heightwidthratio="1.5" data-image-width="212" data-image-height="318"/>
+           <img class="block" id="u23649_img" src="images/chadofer%20copy2.png?crc=4115402468" alt="" data-muse-src="images/chadofer%20copy2.png?crc=4115402468" data-heightwidthratio="1.5" data-image-width="212" data-image-height="318"/>
           </div>
           <!-- /m_editable -->
           <div class="clearfix grpelem" id="pu23647-26"><!-- column -->
